# wyoming-satellite

./: .dockerignore  .gitignore  .projectile  CHANGELOG.md  COMMAND_LINE_ARGUMENTS.md  Dockerfile  README.md  breaking_changes.md  docker-compose.yml  docker-compose_2michat.yml  docker-compose_respeaker-lite.yml  mypy.ini  pylintrc  pyproject.toml  requirements.txt  requirements_audio_enhancement.txt  requirements_dev.txt  requirements_extra.txt  requirements_respeaker.txt  requirements_vad.txt  setup.py  tox.ini
.github/workflows/: build-push.yml  docker-build-branch.yml  docker-build-nightly.yml  docker-build-release.yml  docker-build.yml  test-docker-container.yml  test.yml
docker/: run
docs/: general.md  tutorial_2mic.md  tutorial_docker.md  tutorial_installer.md
etc/: install-respeaker-drivers.sh
examples/: 2mic_service.py  4mic_service.py  nafanya_service.py  requirements.txt  usbmic_service.py
examples/commands/: detection.sh  startup.sh  streaming_start.sh  streaming_stop.sh  stt_start.sh  stt_stop.sh  synthesize.sh  transcript.sh  tts_start.sh  tts_stop.sh
examples/websocket-service/: README.md  requirements.txt  server.py  timers.html
installer/: __init__.py  __main__.py  const.py  dataclasses_json.py  drivers.py  microphone.py  packages.py  satellite.py  services.py  speakers.py  wake_word.py  whiptail.py
script/: _installer.py  build_docker  format  installer.sh  lint  package  run  run_2mic  run_4mic  run_docker  run_usbmic  run_websockets  setup  test
tests/: __init__.py  shared.py  test_always_streaming.py  test_satellite.py  test_wake_streaming.py
wyoming_satellite/: __init__.py  __main__.py  event_handler.py  example_event_client.py  fsmsat.py  satellite.py  settings.py  utils.py  vad.py  webrtc.py
wyoming_satellite/utils/: __init__.py  audio.py  misc.py
