[build-system]
requires = ["setuptools>=62.3"]
build-backend = "setuptools.build_meta"

[project]
name        = "wyoming_satellite"
version     = "1.3.1"
license     = {text = "MIT"}
description = "Wyoming server for remote voice satellite"
readme      = "README.md"
authors     = [
    {name = "Michael Hansen", email = "mike@rhasspy.org"}
]
keywords    = ["rhasspy", "wyoming", "satellite"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9.0"
dependencies = [
    "wyoming==1.5.4",
    "zeroconf==0.88.0",
    "pyring-buffer>=1,<2",
]

[project.optional-dependencies]
all = ["pysilero-vad==1.0.0", "webrtc-noise-gain==1.2.3"]
silerovad = ["pysilero-vad==1.0.0"]
webrtc = ["webrtc-noise-gain==1.2.3"]

[project.scripts]
wyoming-satellite = "wyoming_satellite:__main__.run"

[project.urls]
"Source Code" = "http://github.com/rhasspy/wyoming-satellite"

[tool.setuptools]
platforms = ["any"]
zip-safe  = true
include-package-data = true

[tool.setuptools.packages.find]
include = ["wyoming_satellite"]
exclude = ["tests", "tests.*"]
